[tool.poetry]
name = "data_coder"
version = "0.1.0"
description = "encode, decode ASE"
authors = ["Nguyen Phuoc Tan <nptan2005@gmail.com>"]
packages = [{ include = "src" }]
include = [".../bin/**"]
license = "MIT"
readme = "README.md"
keywords = ["logger", "YAML", "conf"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.11.2"
hexdump = "^3.3"
cryptography = "^42.0.8"
# pydantic-settings = "^2.4.0"

# utilities = {path = ".../utilities", develop = true}




[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."poetry.plugin"]
poetry-plugin-export = "^1.8.3" 

# [tool.poetry.scripts]
# start = "main:main"