[tool.poetry]
name = "iso8583_message"
version = "0.1.0"
description = "iso8583 process"
authors = ["Nguyen Phuoc Tan <nptan2005@gmail.com>"]
packages = [{ include = "src" }]
license = "MIT"
readme = "README.md"
keywords = ["ISO8583"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.11.2"
pyiso8583 = "^3.0.0"

utilities = {path = "../utilities", develop = true}


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."poetry.plugin"]
poetry-plugin-export = "^1.8.0"

# [tool.poetry.scripts]
# start = "main:main"